# ssafy-custom-news-backend

./: .env.example  README.md  pyproject.toml  start.sh
api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_user_name.py  0003_remove_user_name_user_user_name.py
myboard/: enums.py  models.py  views.py
myboard/migrations/: 0001_initial.py  0002_alter_posting_category.py  0002_alter_posting_content.py
myboard/serializers/: comment_serializer.py  posting_comment_serializer.py  posting_serializer.py
myboard/serializers/dto/: posting_list_request_serializer.py  posting_request_serializer.py  (+3 more)
mynews/: enums.py  models.py  responses.py  services.py  views.py
mynews/migrations/: 0001_initial.py  0002_alter_article_embedding.py  0002_rename_userpreference_preference.py  0003_remove_preference_user_id_index_and_more.py  0004_alter_article_content_alter_article_url.py
mynews/serializers/: article_interaction_serializer.py  article_request_serializer.py  article_response_serializer.py  article_serializer.py  chatbot_request_serializer.py  chatbot_response_serializer.py  related_articles_serializer.py  write_article_request_serializer.py  write_article_response_serializer.py
myproject/: settings.py  urls.py
week-16/: .pre-commit-config.yaml  README.md  pyproject.toml
week-16/mynews/: apps.py  mocking.py  models.py  views.py
week-16/myproject/: response.py  urls.py
week-18/: README.md  start.sh
week-18/mynews/: enums.py  models.py  views.py
week-18/myproject/: settings.py
(+11 files in other folders)
